// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast gets geometry quad symbol table 1`] = `
{
  "declarations": [
    {
      "at": 0,
      "flags": 0,
      "identifiers": undefined,
      "symbols": [
        "QUAD",
      ],
      "variable": {
        "locals": [
          {
            "expr": "ivec2(0, 0)",
            "name": "QUAD",
          },
        ],
        "type": {
          "name": "ivec2",
          "qualifiers": [
            "const",
          ],
        },
      },
    },
    {
      "at": 102,
      "flags": 1,
      "func": {
        "name": "getQuadIndex",
        "parameters": [
          "int",
          "vertex",
        ],
        "type": {
          "name": "ivec2",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "QUAD",
      ],
      "symbols": [
        "getQuadIndex",
      ],
    },
    {
      "at": 176,
      "flags": 1,
      "func": {
        "name": "getQuadUV",
        "parameters": [
          "int",
          "vertex",
        ],
        "type": {
          "name": "vec2",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "getQuadIndex",
      ],
      "symbols": [
        "getQuadUV",
      ],
    },
  ],
  "exports": [
    {
      "at": 102,
      "flags": 1,
      "func": {
        "name": "getQuadIndex",
        "parameters": [
          "int",
          "vertex",
        ],
        "type": {
          "name": "ivec2",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "QUAD",
      ],
      "symbols": [
        "getQuadIndex",
      ],
    },
    {
      "at": 176,
      "flags": 1,
      "func": {
        "name": "getQuadUV",
        "parameters": [
          "int",
          "vertex",
        ],
        "type": {
          "name": "vec2",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "getQuadIndex",
      ],
      "symbols": [
        "getQuadUV",
      ],
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": [
    "QUAD",
    "getQuadIndex",
    "getQuadUV",
  ],
  "types": undefined,
  "visibles": [
    "getQuadIndex",
    "getQuadUV",
  ],
}
`;

exports[`ast gets quad vertex declarations 1`] = `
[
  {
    "at": 175,
    "flags": 0,
    "func": {
      "name": "getPosition",
      "parameters": [
        "int",
      ],
      "type": {
        "name": "vec4",
        "qualifiers": [],
      },
    },
    "identifiers": [],
    "symbols": [
      "getPosition",
    ],
  },
  {
    "at": 198,
    "flags": 0,
    "func": {
      "name": "getColor",
      "parameters": [
        "int",
      ],
      "type": {
        "name": "vec4",
        "qualifiers": [],
      },
    },
    "identifiers": [],
    "symbols": [
      "getColor",
    ],
  },
  {
    "at": 218,
    "flags": 0,
    "func": {
      "name": "getSize",
      "parameters": [
        "int",
      ],
      "type": {
        "name": "vec2",
        "qualifiers": [],
      },
    },
    "identifiers": [],
    "symbols": [
      "getSize",
    ],
  },
  {
    "at": 237,
    "flags": 0,
    "func": {
      "name": "getDepth",
      "parameters": [
        "int",
      ],
      "type": {
        "name": "float",
        "qualifiers": [],
      },
    },
    "identifiers": [],
    "symbols": [
      "getDepth",
    ],
  },
]
`;

exports[`ast gets quad vertex functions 1`] = `
[
  {
    "at": 274,
    "flags": 1,
    "func": {
      "name": "getQuadVertex",
      "parameters": [
        "int",
        "vertexIndex",
      ],
      "type": {
        "name": "SolidVertex",
        "qualifiers": [],
      },
    },
    "identifiers": [
      "SolidVertex",
      "vertexIndex",
      "instanceIndex",
      "position",
      "getPosition",
      "instanceIndex",
      "color",
      "getColor",
      "size",
      "getSize",
      "depth",
      "getDepth",
      "center",
      "worldToClip",
      "uv",
      "getQuadUV",
      "vertexIndex",
      "xy",
      "pixelScale",
      "getPerspectiveScale",
      "viewUniforms",
      "SolidVertex",
    ],
    "symbols": [
      "getQuadVertex",
    ],
  },
]
`;

exports[`ast gets quad vertex imports 1`] = `
[
  {
    "at": 0,
    "imports": [
      {
        "imported": "SolidVertex",
        "name": "SolidVertex",
      },
    ],
    "name": "use/types",
    "symbols": [
      "SolidVertex",
    ],
  },
  {
    "at": 0,
    "imports": [
      {
        "imported": "viewUniforms",
        "name": "viewUniforms",
      },
      {
        "imported": "worldToClip",
        "name": "worldToClip",
      },
      {
        "imported": "getPerspectiveScale",
        "name": "getPerspectiveScale",
      },
    ],
    "name": "use/view",
    "symbols": [
      "viewUniforms",
      "worldToClip",
      "getPerspectiveScale",
    ],
  },
  {
    "at": 0,
    "imports": [
      {
        "imported": "getQuadUV",
        "name": "getQuadUV",
      },
    ],
    "name": "geometry/quad",
    "symbols": [
      "getQuadUV",
    ],
  },
]
`;

exports[`ast gets quad vertex symbol table 1`] = `
{
  "declarations": [
    {
      "at": 175,
      "flags": 0,
      "func": {
        "name": "getPosition",
        "parameters": [
          "int",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": undefined,
      "symbols": [
        "getPosition",
      ],
    },
    {
      "at": 198,
      "flags": 0,
      "func": {
        "name": "getColor",
        "parameters": [
          "int",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": undefined,
      "symbols": [
        "getColor",
      ],
    },
    {
      "at": 218,
      "flags": 0,
      "func": {
        "name": "getSize",
        "parameters": [
          "int",
        ],
        "type": {
          "name": "vec2",
          "qualifiers": [],
        },
      },
      "identifiers": undefined,
      "symbols": [
        "getSize",
      ],
    },
    {
      "at": 237,
      "flags": 0,
      "func": {
        "name": "getDepth",
        "parameters": [
          "int",
        ],
        "type": {
          "name": "float",
          "qualifiers": [],
        },
      },
      "identifiers": undefined,
      "symbols": [
        "getDepth",
      ],
    },
    {
      "at": 274,
      "flags": 1,
      "func": {
        "name": "getQuadVertex",
        "parameters": [
          "int",
          "vertexIndex",
        ],
        "type": {
          "name": "SolidVertex",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "getPosition",
        "getColor",
        "getSize",
        "getDepth",
      ],
      "symbols": [
        "getQuadVertex",
      ],
    },
  ],
  "exports": [
    {
      "at": 274,
      "flags": 1,
      "func": {
        "name": "getQuadVertex",
        "parameters": [
          "int",
          "vertexIndex",
        ],
        "type": {
          "name": "SolidVertex",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "getPosition",
        "getColor",
        "getSize",
        "getDepth",
      ],
      "symbols": [
        "getQuadVertex",
      ],
    },
  ],
  "externals": [
    {
      "at": 175,
      "flags": 0,
      "func": {
        "name": "getPosition",
        "parameters": [
          "int",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": undefined,
      "symbols": [
        "getPosition",
      ],
    },
    {
      "at": 198,
      "flags": 0,
      "func": {
        "name": "getColor",
        "parameters": [
          "int",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": undefined,
      "symbols": [
        "getColor",
      ],
    },
    {
      "at": 218,
      "flags": 0,
      "func": {
        "name": "getSize",
        "parameters": [
          "int",
        ],
        "type": {
          "name": "vec2",
          "qualifiers": [],
        },
      },
      "identifiers": undefined,
      "symbols": [
        "getSize",
      ],
    },
    {
      "at": 237,
      "flags": 0,
      "func": {
        "name": "getDepth",
        "parameters": [
          "int",
        ],
        "type": {
          "name": "float",
          "qualifiers": [],
        },
      },
      "identifiers": undefined,
      "symbols": [
        "getDepth",
      ],
    },
  ],
  "globals": undefined,
  "linkable": {
    "getColor": true,
    "getDepth": true,
    "getPosition": true,
    "getSize": true,
  },
  "modules": [
    {
      "at": 0,
      "imports": [
        {
          "imported": "SolidVertex",
          "name": "SolidVertex",
        },
      ],
      "name": "use/types",
      "symbols": [
        "SolidVertex",
      ],
    },
    {
      "at": 0,
      "imports": [
        {
          "imported": "viewUniforms",
          "name": "viewUniforms",
        },
        {
          "imported": "worldToClip",
          "name": "worldToClip",
        },
        {
          "imported": "getPerspectiveScale",
          "name": "getPerspectiveScale",
        },
      ],
      "name": "use/view",
      "symbols": [
        "viewUniforms",
        "worldToClip",
        "getPerspectiveScale",
      ],
    },
    {
      "at": 0,
      "imports": [
        {
          "imported": "getQuadUV",
          "name": "getQuadUV",
        },
      ],
      "name": "geometry/quad",
      "symbols": [
        "getQuadUV",
      ],
    },
  ],
  "symbols": [
    "getPosition",
    "getColor",
    "getSize",
    "getDepth",
    "getQuadVertex",
  ],
  "types": undefined,
  "visibles": [
    "getQuadVertex",
  ],
}
`;

exports[`ast gets shake information for geometry/quad AST 1`] = `
[
  [
    0,
    [
      0,
      1,
      2,
    ],
  ],
  [
    102,
    [
      1,
      2,
    ],
  ],
  [
    176,
    [
      2,
    ],
  ],
]
`;

exports[`ast gets shake information for getQuadVertex AST 1`] = `
[
  [
    175,
    [
      0,
      4,
    ],
  ],
  [
    198,
    [
      1,
      4,
    ],
  ],
  [
    218,
    [
      2,
      4,
    ],
  ],
  [
    237,
    [
      3,
      4,
    ],
  ],
  [
    274,
    [
      4,
    ],
  ],
]
`;

exports[`ast gets shake information for use/types AST 1`] = `
[
  [
    15,
    [
      0,
    ],
  ],
  [
    97,
    [
      1,
    ],
  ],
]
`;

exports[`ast gets solid fragment declarations 1`] = `
[
  {
    "at": 54,
    "flags": 0,
    "func": {
      "name": "getFragment",
      "parameters": [
        "vec4",
      ],
      "type": {
        "name": "vec4",
        "qualifiers": [],
      },
    },
    "identifiers": [],
    "symbols": [
      "getFragment",
    ],
  },
  {
    "at": 103,
    "flags": 0,
    "identifiers": [],
    "symbols": [
      "fragIndex",
    ],
    "variable": {
      "locals": [
        {
          "expr": null,
          "name": "fragIndex",
        },
      ],
      "type": {
        "name": "uint",
        "qualifiers": [
          "layout(location = 0)",
          "in",
          "flat",
        ],
      },
    },
  },
  {
    "at": 148,
    "flags": 0,
    "identifiers": [],
    "symbols": [
      "outColor",
    ],
    "variable": {
      "locals": [
        {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": {
        "name": "uvec4",
        "qualifiers": [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
  {
    "at": 195,
    "flags": 0,
    "identifiers": [],
    "symbols": [
      "fragColor",
    ],
    "variable": {
      "locals": [
        {
          "expr": null,
          "name": "fragColor",
        },
      ],
      "type": {
        "name": "vec4",
        "qualifiers": [
          "layout(location = 0)",
          "in",
        ],
      },
    },
  },
  {
    "at": 235,
    "flags": 0,
    "identifiers": [],
    "symbols": [
      "fragUV",
    ],
    "variable": {
      "locals": [
        {
          "expr": null,
          "name": "fragUV",
        },
      ],
      "type": {
        "name": "vec2",
        "qualifiers": [
          "layout(location = 1)",
          "in",
        ],
      },
    },
  },
  {
    "at": 273,
    "flags": 0,
    "identifiers": [],
    "symbols": [
      "outColor",
    ],
    "variable": {
      "locals": [
        {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": {
        "name": "vec4",
        "qualifiers": [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
]
`;

exports[`ast gets test declarations 1`] = `
[
  {
    "at": 7,
    "flags": 0,
    "identifiers": [],
    "symbols": [
      "x",
      "y",
    ],
    "variable": {
      "locals": [
        {
          "expr": null,
          "name": "x",
        },
        {
          "expr": null,
          "name": "y",
        },
      ],
      "type": {
        "name": "float",
        "qualifiers": [],
      },
    },
  },
  {
    "at": 25,
    "flags": 0,
    "identifiers": [],
    "symbols": [
      "a",
      "b",
      "c",
      "d",
    ],
    "variable": {
      "locals": [
        {
          "expr": "3",
          "name": "a",
        },
        {
          "expr": "1",
          "name": "b",
        },
        {
          "expr": null,
          "name": "c",
        },
        {
          "expr": null,
          "name": "d",
        },
      ],
      "type": {
        "name": "int",
        "qualifiers": [],
      },
    },
  },
]
`;

exports[`ast gets test declarations with array 1`] = `
[
  {
    "at": 7,
    "flags": 0,
    "identifiers": [],
    "symbols": [
      "QUAD",
    ],
    "variable": {
      "locals": [
        {
          "expr": "ivec2(0, 0)",
          "name": "QUAD",
        },
      ],
      "type": {
        "name": "ivec2",
        "qualifiers": [
          "const",
        ],
      },
    },
  },
]
`;

exports[`ast gets test declarations with qualified declaration 1`] = `
[
  {
    "at": 7,
    "flags": 0,
    "symbols": [
      "unknown",
    ],
  },
  {
    "at": 42,
    "flags": 0,
    "identifiers": [],
    "symbols": [],
    "variable": {
      "locals": [],
      "type": {
        "name": "vec2",
        "qualifiers": [
          "layout(location = 1)",
          "in",
        ],
      },
    },
  },
]
`;

exports[`ast gets use types symbol table 1`] = `
{
  "declarations": [
    {
      "at": 15,
      "flags": 1,
      "identifiers": undefined,
      "symbols": [
        "SolidVertex",
      ],
      "variable": {
        "locals": [],
        "type": {
          "members": [
            {
              "name": "position",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "color",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "uv",
              "type": {
                "name": "vec2",
              },
            },
          ],
          "name": "SolidVertex",
          "qualifiers": [],
        },
      },
    },
    {
      "at": 97,
      "flags": 1,
      "identifiers": undefined,
      "symbols": [
        "MeshVertex",
      ],
      "variable": {
        "locals": [],
        "type": {
          "members": [
            {
              "name": "position",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "normal",
              "type": {
                "name": "vec3",
              },
            },
            {
              "name": "color",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "uv",
              "type": {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": [],
        },
      },
    },
  ],
  "exports": [
    {
      "at": 15,
      "flags": 1,
      "identifiers": undefined,
      "symbols": [
        "SolidVertex",
      ],
      "variable": {
        "locals": [],
        "type": {
          "members": [
            {
              "name": "position",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "color",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "uv",
              "type": {
                "name": "vec2",
              },
            },
          ],
          "name": "SolidVertex",
          "qualifiers": [],
        },
      },
    },
    {
      "at": 97,
      "flags": 1,
      "identifiers": undefined,
      "symbols": [
        "MeshVertex",
      ],
      "variable": {
        "locals": [],
        "type": {
          "members": [
            {
              "name": "position",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "normal",
              "type": {
                "name": "vec3",
              },
            },
            {
              "name": "color",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "uv",
              "type": {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": [],
        },
      },
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": [
    "SolidVertex",
    "MeshVertex",
  ],
  "types": undefined,
  "visibles": [
    "SolidVertex",
    "MeshVertex",
  ],
}
`;

exports[`ast gets use view declarations 1`] = `
[
  {
    "at": 15,
    "flags": 1,
    "identifiers": [
      "VIEW_BINDGROUP",
      "VIEW_BINDING",
    ],
    "struct": {
      "name": "viewUniforms",
      "struct": {
        "members": [
          {
            "name": "projectionMatrix",
            "type": {
              "name": "mat4",
            },
          },
          {
            "name": "viewMatrix",
            "type": {
              "name": "mat4",
            },
          },
          {
            "name": "viewPosition",
            "type": {
              "name": "vec4",
            },
          },
          {
            "name": "viewResolution",
            "type": {
              "name": "vec2",
            },
          },
          {
            "name": "viewSize",
            "type": {
              "name": "vec2",
            },
          },
          {
            "name": "viewWorldDepth",
            "type": {
              "name": "float",
            },
          },
          {
            "name": "viewPixelRatio",
            "type": {
              "name": "float",
            },
          },
        ],
      },
      "type": {
        "name": "ViewUniforms",
        "qualifiers": [
          "layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING)",
          "uniform",
        ],
      },
    },
    "symbols": [
      "viewUniforms",
      "ViewUniforms",
    ],
  },
]
`;

exports[`ast gets use view symbol table 1`] = `
{
  "declarations": [
    {
      "at": 15,
      "flags": 1,
      "identifiers": undefined,
      "struct": {
        "name": "viewUniforms",
        "struct": {
          "members": [
            {
              "name": "projectionMatrix",
              "type": {
                "name": "mat4",
              },
            },
            {
              "name": "viewMatrix",
              "type": {
                "name": "mat4",
              },
            },
            {
              "name": "viewPosition",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "viewResolution",
              "type": {
                "name": "vec2",
              },
            },
            {
              "name": "viewSize",
              "type": {
                "name": "vec2",
              },
            },
            {
              "name": "viewWorldDepth",
              "type": {
                "name": "float",
              },
            },
            {
              "name": "viewPixelRatio",
              "type": {
                "name": "float",
              },
            },
          ],
        },
        "type": {
          "name": "ViewUniforms",
          "qualifiers": [
            "layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING)",
            "uniform",
          ],
        },
      },
      "symbols": [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
    {
      "at": 276,
      "flags": 1,
      "func": {
        "name": "worldToView",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "worldToView",
      ],
    },
    {
      "at": 373,
      "flags": 1,
      "func": {
        "name": "viewToClip",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "viewToClip",
      ],
    },
    {
      "at": 475,
      "flags": 1,
      "func": {
        "name": "worldToClip",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewToClip",
        "worldToView",
      ],
      "symbols": [
        "worldToClip",
      ],
    },
    {
      "at": 571,
      "flags": 1,
      "func": {
        "name": "clipToScreen3D",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec3",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "clipToScreen3D",
      ],
    },
    {
      "at": 690,
      "flags": 1,
      "func": {
        "name": "screenToClip3D",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec3",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "screenToClip3D",
      ],
    },
    {
      "at": 815,
      "flags": 1,
      "func": {
        "name": "worldToClip3D",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec3",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewToClip",
        "worldToView",
      ],
      "symbols": [
        "worldToClip3D",
      ],
    },
    {
      "at": 953,
      "flags": 1,
      "func": {
        "name": "getPerspectiveScale",
        "parameters": [
          "float",
          "w",
        ],
        "type": {
          "name": "float",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "getPerspectiveScale",
      ],
    },
  ],
  "exports": [
    {
      "at": 15,
      "flags": 1,
      "identifiers": undefined,
      "struct": {
        "name": "viewUniforms",
        "struct": {
          "members": [
            {
              "name": "projectionMatrix",
              "type": {
                "name": "mat4",
              },
            },
            {
              "name": "viewMatrix",
              "type": {
                "name": "mat4",
              },
            },
            {
              "name": "viewPosition",
              "type": {
                "name": "vec4",
              },
            },
            {
              "name": "viewResolution",
              "type": {
                "name": "vec2",
              },
            },
            {
              "name": "viewSize",
              "type": {
                "name": "vec2",
              },
            },
            {
              "name": "viewWorldDepth",
              "type": {
                "name": "float",
              },
            },
            {
              "name": "viewPixelRatio",
              "type": {
                "name": "float",
              },
            },
          ],
        },
        "type": {
          "name": "ViewUniforms",
          "qualifiers": [
            "layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING)",
            "uniform",
          ],
        },
      },
      "symbols": [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
    {
      "at": 276,
      "flags": 1,
      "func": {
        "name": "worldToView",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "worldToView",
      ],
    },
    {
      "at": 373,
      "flags": 1,
      "func": {
        "name": "viewToClip",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "viewToClip",
      ],
    },
    {
      "at": 475,
      "flags": 1,
      "func": {
        "name": "worldToClip",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec4",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewToClip",
        "worldToView",
      ],
      "symbols": [
        "worldToClip",
      ],
    },
    {
      "at": 571,
      "flags": 1,
      "func": {
        "name": "clipToScreen3D",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec3",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "clipToScreen3D",
      ],
    },
    {
      "at": 690,
      "flags": 1,
      "func": {
        "name": "screenToClip3D",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec3",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "screenToClip3D",
      ],
    },
    {
      "at": 815,
      "flags": 1,
      "func": {
        "name": "worldToClip3D",
        "parameters": [
          "vec4",
          "position",
        ],
        "type": {
          "name": "vec3",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewToClip",
        "worldToView",
      ],
      "symbols": [
        "worldToClip3D",
      ],
    },
    {
      "at": 953,
      "flags": 1,
      "func": {
        "name": "getPerspectiveScale",
        "parameters": [
          "float",
          "w",
        ],
        "type": {
          "name": "float",
          "qualifiers": [],
        },
      },
      "identifiers": [
        "viewUniforms",
      ],
      "symbols": [
        "getPerspectiveScale",
      ],
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": [
    "viewUniforms",
    "ViewUniforms",
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "getPerspectiveScale",
  ],
  "types": [
    "viewUniforms",
    "ViewUniforms",
  ],
  "visibles": [
    "viewUniforms",
    "ViewUniforms",
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "getPerspectiveScale",
  ],
}
`;

exports[`ast rewrites a lot of code using the compressed AST 1`] = `
[
  [
    1,
    1,
    46,
  ],
  [
    0,
    47,
    79,
  ],
  [
    2,
    0,
    11,
  ],
  [
    2,
    12,
    21,
  ],
  [
    0,
    40,
    85,
  ],
  [
    2,
    35,
    44,
  ],
  [
    0,
    17,
    57,
  ],
  [
    2,
    30,
    39,
  ],
  [
    0,
    11,
    48,
  ],
  [
    2,
    30,
    36,
  ],
  [
    0,
    16,
    300,
  ],
  [
    2,
    5,
    9,
  ],
  [
    2,
    88,
    99,
  ],
  [
    2,
    16,
    25,
  ],
  [
    2,
    56,
    57,
  ],
  [
    2,
    32,
    41,
  ],
  [
    2,
    41,
    50,
  ],
  [
    2,
    12,
    13,
  ],
  [
    2,
    11,
    17,
  ],
  [
    2,
    9,
    10,
  ],
]
`;

exports[`ast rewrites a lot of code using the compressed AST 2`] = `
{
  "__nodes": [
    [
      1,
      1,
      46,
    ],
    [
      0,
      47,
      79,
    ],
    [
      2,
      0,
      11,
    ],
    [
      2,
      12,
      21,
    ],
    [
      0,
      40,
      85,
    ],
    [
      2,
      35,
      44,
    ],
    [
      0,
      17,
      57,
    ],
    [
      2,
      30,
      39,
    ],
    [
      0,
      11,
      48,
    ],
    [
      2,
      30,
      36,
    ],
    [
      0,
      16,
      300,
    ],
    [
      2,
      5,
      9,
    ],
    [
      2,
      88,
      99,
    ],
    [
      2,
      16,
      25,
    ],
    [
      2,
      56,
      57,
    ],
    [
      2,
      32,
      41,
    ],
    [
      2,
      41,
      50,
    ],
    [
      2,
      12,
      13,
    ],
    [
      2,
      11,
      17,
    ],
    [
      2,
      9,
      10,
    ],
  ],
  "cursor": [Function],
}
`;

exports[`ast rewrites code using the AST 1`] = `
"
    float _zz_getValue(int index);
    void entryPoint() {
      float x = 3.0;
      float y = _zz_getValue(2);
    }
    "
`;

exports[`ast rewrites code using the compressed AST 1`] = `
[
  [
    0,
    5,
    31,
  ],
  [
    2,
    6,
    14,
  ],
  [
    0,
    25,
    121,
  ],
  [
    2,
    5,
    9,
  ],
  [
    2,
    46,
    54,
  ],
  [
    2,
    33,
    34,
  ],
]
`;

exports[`ast rewrites code using the compressed AST 2`] = `
{
  "__nodes": [
    [
      0,
      5,
      31,
    ],
    [
      2,
      6,
      14,
    ],
    [
      0,
      25,
      121,
    ],
    [
      2,
      5,
      9,
    ],
    [
      2,
      46,
      54,
    ],
    [
      2,
      33,
      34,
    ],
  ],
  "cursor": [Function],
}
`;

exports[`ast shakes simple program 1`] = `
[
  [
    1,
    [
      0,
      1,
      2,
    ],
  ],
  [
    38,
    [
      1,
    ],
  ],
  [
    83,
    [
      2,
    ],
  ],
]
`;

exports[`ast shakes simple program 2`] = `
"
const float x = 1.0;

float getA() {
  return x;
}

"
`;

exports[`ast shakes struct type args 1`] = `
[
  [
    1,
    [
      0,
      1,
    ],
  ],
  [
    57,
    [
      1,
    ],
  ],
]
`;

exports[`ast shakes struct type args 2`] = `
"
struct VertexOutput {
  vec4 position;
  vec4 color;
};
vec4 main(VertexOutput arg) { return arg.color; }
    "
`;

exports[`ast shakes use/view AST 1`] = `
[
  [
    15,
    [
      0,
      2,
      4,
      7,
      3,
      5,
      6,
      8,
      1,
    ],
  ],
  [
    276,
    [
      2,
      4,
      7,
    ],
  ],
  [
    373,
    [
      3,
      4,
      7,
    ],
  ],
  [
    475,
    [
      4,
    ],
  ],
  [
    571,
    [
      5,
    ],
  ],
  [
    690,
    [
      6,
    ],
  ],
  [
    815,
    [
      7,
    ],
  ],
  [
    953,
    [
      8,
    ],
  ],
]
`;

exports[`ast shakes use/view AST 2`] = `
"layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING) uniform ViewUniforms {
  mat4 projectionMatrix;
  mat4 viewMatrix;
  vec4 viewPosition;
  vec2 viewResolution;
  vec2 viewSize;
  float viewWorldDepth;
  float viewPixelRatio;
} viewUniforms;

vec4 worldToView(vec4 position) {
  return viewUniforms.viewMatrix * position;
}

vec4 viewToClip(vec4 position) {
  return viewUniforms.projectionMatrix * position;
}

vec4 worldToClip(vec4 position) {
  return viewToClip(worldToView(position));
}

"
`;

exports[`ast shakes use/view AST using compressed AST 1`] = `
[
  [
    15,
    [
      0,
      2,
      4,
      7,
      3,
      5,
      6,
      8,
      1,
    ],
  ],
  [
    276,
    [
      2,
      4,
      7,
    ],
  ],
  [
    373,
    [
      3,
      4,
      7,
    ],
  ],
  [
    475,
    [
      4,
    ],
  ],
  [
    571,
    [
      5,
    ],
  ],
  [
    690,
    [
      6,
    ],
  ],
  [
    815,
    [
      7,
    ],
  ],
  [
    953,
    [
      8,
    ],
  ],
]
`;
